--- a/frontend/src/components/hero/Hero.css
+++ b/frontend/src/components/hero/Hero.css
@@ -28,6 +28,9 @@
     flex-direction: row;
     width: 100%;
   }
+  .ctn-wrapper-landing {
+    background: none;
+  }
   .ctn-img-bg-3 img.third {
     display: none;
     animation: none;
@@ -54,6 +57,9 @@
       flex-direction: row;
       width: 100%;
     }
+    .ctn-wrapper-landing {
+      background: none;
+    }
   
     .ctn-wrapper-landing {
       flex-direction: column;
@@ -64,7 +70,7 @@
       width: 100%;
       flex-direction: column;
       align-items: center;
-      padding: 100px 0 20px 0;
+      padding: 5px;
     }
   
     .ctn-land-hero a {
@@ -108,7 +114,7 @@
   
     .ctn-text-1 span {
       font-size: 35px;
-      margin: 20px 0;
+      margin: 20px 10px;
       text-align: center;
       letter-spacing: 5px;
     }
@@ -122,12 +128,14 @@
     @media (max-width: 768px) {
       .ctn-images-hero {
         margin: 20px;
+        display: none;
       }
     }
     
     @media (max-width: 480px) {
       .ctn-images-hero {
         margin: 10px;
+        display: none;
       }
     }
 }
