--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -204,6 +204,7 @@ svg.rotating-slow {
 @media only screen and (max-width: 480px){
   svg.rotating-slow{
     animation: none;
+    display: none;
   }
 }
 
