--- a/frontend/src/pages/sellers/sellers.css
+++ b/frontend/src/pages/sellers/sellers.css
@@ -458,7 +458,7 @@
         height: 100%;
         width: 100%;
         position:relative;
-        top: 80px;
+        margin-top: 120px;
     }   
     .header-menu{
         display: flex;
