--- a/frontend/src/pages/shop/shop.css
+++ b/frontend/src/pages/shop/shop.css
@@ -311,6 +311,7 @@
       width: fit-content;
       height: fit-content;
       margin-left: 15%;
+      left: 16%;
     }
     .filter-card {
       width: 100%;
