--- a/frontend/src/components/accuser/AccountUserinfo.css
+++ b/frontend/src/components/accuser/AccountUserinfo.css
@@ -35,6 +35,7 @@
         top: auto;
         padding: 20px;
         margin-top: 0%;
+        left: 16%;
     }
     .form-row.account {
         flex-direction: column;
@@ -43,6 +44,7 @@
         width: fit-content;
         margin-left: 1%;
         margin-right: 1%;
+        left: 12%;
     }
     .account-info {
         margin-left: 0px;
@@ -55,5 +57,6 @@
     .account-info {
         margin-left: 0px;
         padding: 20px;
+        left: 13%;
     }
 } 
