--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -226,7 +226,7 @@ container-footer {
 @media only screen and (max-width: 1024px) {
   .container-footer {
   height: 47vh;
-  margin-top: auto;
+  margin-top: 35%;
   }
   
   .ctn-img-logo {
