--- a/V2/frontend/src/components/Register.css
+++ b/V2/frontend/src/components/Register.css
@@ -1,32 +1,65 @@
 .register-container {
-    max-width: 300px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 4px;
-  }
-  
-  .register-title {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  
-  .register-input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-  }
-  
-  .register-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    width: 100%;
-    cursor: pointer;
-  }
-  
-  .register-button:hover {
-    background-color: #0056b3;
-  }
-  
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 4px;
+  background-color: rgba(47, 134, 166, 0.6);
+  color: white;
+}
+
+.register-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.register-input {
+  width: 95%;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.register-input[type="file"] {
+  padding: 0;
+}
+
+.register-button {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.register-button:hover {
+  background-color: #45a049;
+}
+
+.register-input[type="file"]::-webkit-file-upload-button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.register-input[type="file"]::-webkit-file-upload-button:hover {
+  background-color: #45a049;
+}
+
+.register-image-container {
+  text-align: center;
+}
+
+.register-image {
+  max-width: 100%;
+  height: auto;
+  margin-top: 10px;
+  max-height: 200px; /* Ajusta el tamaño máximo de la imagen según tus preferencias */
+}
