--- a/V2/frontend/src/components/Register.css
+++ b/V2/frontend/src/components/Register.css
@@ -1,5 +1,5 @@
 .register-container {
-  max-width: 400px;
+  width: 400px;
   margin: 0 auto;
   padding: 20px;
   border-radius: 4px;
@@ -61,5 +61,14 @@
   max-width: 100%;
   height: auto;
   margin-top: 10px;
-  max-height: 200px; /* Ajusta el tamaño máximo de la imagen según tus preferencias */
+  max-height: 200px;
+  object-fit: cover;
+  object-fit: contain;
+    /* Ajusta el tamaño máximo de la imagen según tus preferencias */
+}
+
+.image-Show{
+  max-width: 400px;
+  min-width: 350px;
+  max-height: auto;
 }
