--- a/V2/frontend/src/components/Register.css
+++ b/V2/frontend/src/components/Register.css
@@ -20,6 +20,14 @@
   border: 1px solid #ccc;
   border-radius: 4px;
 }
+.register-inputS{
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
 .register-input[type="file"] {
   padding: 0;
