--- a/V2/frontend/src/components/StorePage.css
+++ b/V2/frontend/src/components/StorePage.css
@@ -5,4 +5,36 @@
     font-size: 24px;
     color: #333;
   }
-  
+  /* StorePage.css */
+
+.store-page {
+  display: flex;
+}
+
+.store-page-title {
+  margin-right: 20px;
+}
+
+.sidebar {
+  width: 200px;
+  background-color: #f2f2f2;
+  padding: 10px;
+}
+
+.sidebar h2 {
+  margin-bottom: 10px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar li {
+  margin-bottom: 5px;
+}
+
+.sidebar li:hover {
+  cursor: pointer;
+  color: #ff8000;
+}
