--- a/V2/frontend/src/components/StorePage.css
+++ b/V2/frontend/src/components/StorePage.css
@@ -1,14 +1,9 @@
-.store-page {
-    padding: 20px;
-  }
-.store-page-title {
-    font-size: 24px;
-    color: #333;
-  }
-  /* StorePage.css */
+/* StorePage.css */
 
 .store-page {
   display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
 .store-page-title {
@@ -17,8 +12,12 @@
 
 .sidebar {
   width: 200px;
-  background-color: #f2f2f2;
   padding: 10px;
+  background-color: rgb(47, 134, 166);
+  border: 0.5px solid orange;
+  color: white;
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
 .sidebar h2 {
@@ -32,9 +31,82 @@
 
 .sidebar li {
   margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .sidebar li:hover {
-  cursor: pointer;
   color: #ff8000;
+}
+
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.product-list-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.product-list-header h3 {
+  margin: 0;
+}
+
+.product-list-header select {
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.product-card {
+  width: 200px;
+  border-radius: 4px;
+  padding: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  background-color: rgb(47, 134, 166);
+  border: 1px solid orange;
+  color: white;
+}
+
+.product-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.product-card h3 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.product-card p {
+  margin: 0;
+  color: #777;
+}
+
+.product-card .product-actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.product-card button {
+  background-color: #ff8000;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.product-card .product-info-icon {
+  font-size: 20px;
+  cursor: pointer;
 }
