--- a/V2/frontend/src/components/Footer.css
+++ b/V2/frontend/src/components/Footer.css
@@ -9,3 +9,12 @@
     margin: 0 auto;
   }
   
+  .icons img{
+    max-width: 40px;
+    filter: invert(100%);
+  }
+
+  .social-media a{
+    margin-right: 30px;
+    margin-left: 30px;
+  }
