--- a/V2/frontend/src/components/VendorsPage.css
+++ b/V2/frontend/src/components/VendorsPage.css
@@ -5,6 +5,35 @@
   
   .vendors-page-title {
     font-size: 24px;
-    color: #333;
+    color: #ffffff;
   }
   
+  .vendors-cards {
+    padding: 15px;
+    margin: 10px;
+    display: grid;
+    align-items: center;
+    justify-content: center; /* Agregado para centrar horizontalmente */
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: 450px;
+  }
+  
+  .vendor-card {
+    background-color: rgb(47, 134, 166);
+    border: 5px solid orange;
+    max-width: 250px;
+    max-height: 400px;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 15px;
+  }
+  
+  .vendor-data {
+    color: white;
+    font-size: 20px;
+  }
+  
+  .vendor-card img {
+    max-width: 200px;
+    justify-content: center;
+  }
