--- a/V2/frontend/src/components/VendorsPage.css
+++ b/V2/frontend/src/components/VendorsPage.css
@@ -30,15 +30,16 @@ h2 {
 }
 
 .vendor-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
   justify-content: center;
   margin-top: 20px;
+  grid-template-columns: 250px 250px 250px 250px 250px;
+  grid-template-rows: auto;
 }
 
 .vendor-card {
   width: 200px;
-  border-radius: 4px;
+  border-radius: 6px;
   padding: 10px;
   margin: 8px;
   background-color: rgb(47, 134, 166);
