--- a/V2/frontend/src/components/Footer.css
+++ b/V2/frontend/src/components/Footer.css
@@ -10,8 +10,8 @@
     margin: 0 auto;
   }
   
-  .icons img{
-    max-width: 40px;
+  .icon{
+    max-width: 45px;
     filter: invert(100%);
   }
 
