--- a/V2/frontend/src/components/NavigationBar.css
+++ b/V2/frontend/src/components/NavigationBar.css
@@ -1,7 +1,7 @@
 /* Estilos previos (sin cambios) */
 
 .navigation-bar {
-  height: 50px;
+  height: 60px;
 }
 
 .navigation-container {
@@ -9,11 +9,15 @@
   align-items: center;
   justify-content: space-between; /* Alinea el logo a la izquierda y el botón a la derecha */
   width: 100%;
+  position: fixed;
+  z-index: 90;
+  transition: background-color 0.3s ease; /* Agrega una transición suave para el cambio de color de fondo */
 }
 
 .logo {
-  margin-right: 10px;
-  max-width: 100px;
+  margin-right: 20px;
+  margin-left: 5px;
+  max-width: 175px;
 }
 
 .logo img {
@@ -27,10 +31,12 @@
   justify-content: flex-end;
   flex-grow: 1;
   margin-left: 10px;
+  margin-right: 20px;
 }
 
 .navigation-list li {
   margin-right: 38px;
+  font-size: 19px;
 }
 
 .navigation-list li:last-child {
@@ -87,4 +93,21 @@
     margin-right: 0; /* Quita el margen derecho entre los elementos de la lista */
     margin-bottom: 10px; /* Añade un poco de espacio entre los elementos */
   }
+}
+
+/* Nuevos estilos para el header cuando se hace scroll hacia abajo */
+
+.navigation-bar.scrolled {
+  background-color: rgb(0, 24, 41); /* Cambia el color de fondo a tu preferencia */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Opcional: Agrega sombra al header para resaltarlo más */
+}
+
+/* Estilos adicionales para otros elementos del header cuando se hace scroll hacia abajo */
+/* Por ejemplo, podrías ajustar el color de la tipografía u otros estilos */
+.navigation-bar.scrolled .navigation-list li a {
+  color: #fff; /* Cambia el color de los enlaces cuando se hace scroll */
+}
+
+.navigation-bar.scrolled .hamburger-menu {
+  color: #fff; /* Cambia el color del ícono del menú hamburguesa cuando se hace scroll */
 }
