--- a/V2/frontend/src/components/HomePage.css
+++ b/V2/frontend/src/components/HomePage.css
@@ -81,8 +81,8 @@ body {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
     transition: all 0.3s ease;
     border-width: 0px;
-    top:80%
-    
+    top:80%;
+    font-size: 19px;
   }
   
   .RegistroHome:hover {
