--- a/V2/frontend/src/components/NavigationBar.css
+++ b/V2/frontend/src/components/NavigationBar.css
@@ -14,6 +14,15 @@
   transition: background-color 0.3s ease; /* Agrega una transición suave para el cambio de color de fondo */
 }
 
+.navigation-container {
+  background-color: transparent; 
+  transition: background-color 0.3s ease;
+}
+
+.navigation-container.scrolled {
+  background-color: rgb(0, 24, 41); 
+}
+
 .logo {
   margin-right: 20px;
   margin-left: 5px;
@@ -95,19 +104,4 @@
   }
 }
 
-/* Nuevos estilos para el header cuando se hace scroll hacia abajo */
 
-.navigation-bar.scrolled {
-  background-color: rgb(0, 24, 41); /* Cambia el color de fondo a tu preferencia */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Opcional: Agrega sombra al header para resaltarlo más */
-}
-
-/* Estilos adicionales para otros elementos del header cuando se hace scroll hacia abajo */
-/* Por ejemplo, podrías ajustar el color de la tipografía u otros estilos */
-.navigation-bar.scrolled .navigation-list li a {
-  color: #fff; /* Cambia el color de los enlaces cuando se hace scroll */
-}
-
-.navigation-bar.scrolled .hamburger-menu {
-  color: #fff; /* Cambia el color del ícono del menú hamburguesa cuando se hace scroll */
-}
