--- a/V2/frontend/src/components/MyAccountPage.css
+++ b/V2/frontend/src/components/MyAccountPage.css
@@ -7,18 +7,35 @@
   color: #333;
 }
 
-.my-account-info {
-  width: 300px;
+.my-account-container {
+  display: grid;
+  max-width: 750px;
+  grid-template-columns: 45% 55%;
+  grid-template-rows: auto;
   margin: 0 auto;
   margin-top: 7px;
   margin-bottom: 5px;
   padding: 20px;
-  border-radius: 4px;
+  border-radius: 5px;
   background-color: rgba(47, 134, 166, 0.6);
   color: white;
 }
+.my-account-img{
+  margin: 5px;
+}
+.my-account-img h2{
+  text-align: center;
+}
 
 .info-image {
-  max-width: 100%;
+  max-width: 300px;
   max-height: auto;
+  border-radius: 5px;
+}
+.my-account-info{
+  padding: 5px;
+  margin: 5px;
+}
+.my-account-info h2 {
+  text-align: center;
 }
