--- a/V2/frontend/src/components/MyAccountPage.css
+++ b/V2/frontend/src/components/MyAccountPage.css
@@ -8,13 +8,25 @@
 }
 
 /* Contenedor de los elementos de la página */
-.my-account-container {
+.vendor-info {
   max-width: 850px;
   max-height: auto;
   display: grid;
   grid-template-areas:
     "image-inf image-inf image-inf"
     "data-inf text-inf text-inf"; /* Ajusta el grid para que la imagen aparezca arriba y el resto abajo */
+  margin: 0 auto;
+  margin-top: 7px;
+  margin-bottom: 5px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: rgba(47, 134, 166, 0.6);
+  color: white;
+}
+
+.buyer-info {
+  max-width: 850px;
+  max-height: auto; /* Ajusta el grid para que la imagen aparezca arriba y el resto abajo */
   margin: 0 auto;
   margin-top: 7px;
   margin-bottom: 5px;
@@ -40,7 +52,10 @@
   border-radius: 50%;
 }
 /* Información de la cuenta */
-.my-account-info {
+.buyer-info .my-account-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 5px;
   padding: 5px;
   grid-area: data-inf;
