--- a/V2/frontend/src/components/ShoppingCart.css
+++ b/V2/frontend/src/components/ShoppingCart.css
@@ -10,4 +10,25 @@
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
+  .show-products{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    
+  }
+  .producto-cart{
+    border-radius: 5px;
+    max-width: 1400px;
+    background-color: aqua;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  .producto-cart img {
+    max-width: 200px;
+    border-radius: 10px;
+    margin: 10px;
+  }
   
