--- a/V2/frontend/src/components/ShoppingCart.css
+++ b/V2/frontend/src/components/ShoppingCart.css
@@ -11,15 +11,16 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
   .show-products{
-    display: flex;
+    display: grid;
+    grid-template-columns: 800px;
+    grid-template-rows: auto ;
+    grid-template-rows: 200px;
     justify-content: center;
-    align-content: center;
-    
   }
   .producto-cart{
     border-radius: 5px;
     max-width: 1400px;
-    background-color: aqua;
+    background-color: rgb(23, 80, 145);
     margin: 10px;
     display: flex;
     justify-content: space-between;
