--- a/V2/frontend/src/components/ShoppingCart.css
+++ b/V2/frontend/src/components/ShoppingCart.css
@@ -3,6 +3,11 @@
     color: #333;
     margin-bottom: 20px;
   }
+  .search{
+    border-radius: 5px;
+    max-width: 200px;
+    margin: 10px;
+  }
   
   .shopping-cart-content {
     background-color: #f5f5f5;
@@ -12,24 +17,83 @@
   }
   .show-products{
     display: grid;
-    grid-template-columns: 800px;
+    grid-template-columns: 1200px;
     grid-template-rows: auto ;
     grid-template-rows: 200px;
     justify-content: center;
+    color: #f5f5f5;
   }
   .producto-cart{
     border-radius: 5px;
     max-width: 1400px;
-    background-color: rgb(23, 80, 145);
+    background-color: rgba(23, 80, 145, 0.563);
     margin: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto;
   }
+  .img-product,
+  .name-product,
+  .price-product,
+  .cantidad-product{
+    justify-content:baseline;
+  }
+
   .producto-cart img {
     max-width: 200px;
     border-radius: 10px;
     margin: 10px;
   }
+  .cantidad-product{
+    padding-left: 20px;
+  }
+
+  .btn-add,
+  .btn-remove{
+    font-size: 15px;
+  }
   
+  .btn-add {
+    width: 35px;
+    height: 35px;
+    background-color: #f5f5f5;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+  }
+  
+  .btn-add:hover {
+    background-color: #e5e5e5;
+  }
+  
+  .btn-add:active {
+    background-color: #cccaca;
+  }
+  
+  .btn-remove {
+    width: 35px;
+    height: 35px;
+    background-color: #f5f5f5;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+  }
+  
+  .btn-remove:hover {
+    background-color: #e5e5e5;
+  }
+  
+  .btn-remove:active {
+    background-color: #cccaca;
+  }
+  
+  .product-amount {
+    font-size: 20px;
+    color: #f5f5f5;
+    margin: 10px;
+  }
