--- a/V2/frontend/src/components/ShoppingCart.css
+++ b/V2/frontend/src/components/ShoppingCart.css
@@ -1,143 +1,172 @@
 .shopping-cart-title {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 20px;
-  }
-  .search{
-    border-radius: 5px;
-    max-width: 200px;
-    margin: 10px;
-  }
-  
-  .shopping-cart-content {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  .show-products{
-    display: grid;
-    grid-template-columns: 1200px;
-    grid-template-rows: auto ;
-    grid-template-rows: 200px;
-    justify-content: center;
-    color: #f5f5f5;
-  }
-  .producto-cart{
-    align-items: center;
-    border-radius: 5px;
-    max-width: 1400px;
-    background-color: rgba(23, 80, 145, 0.563);
-    margin-bottom: 10px;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto;
-  }
-  .img-product,
-  .name-product,
-  .price-product,
-  .cantidad-product{
-    justify-content:baseline;
-  }
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+}
 
-  .producto-cart img {
-    max-width: 200px;
-    border-radius: 10px;
-    margin: 10px;
-  }
+.presentation {
+  background-color: rgba(47, 134, 166, 0.832);
+  border: 1px solid orange;
+  color: white;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 10px;
+  align-self: center;
+  max-width: 1600px;
+}
 
-  .total-price {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    max-width: 1400px;
-    margin: 10px;
-    color: #ffffff;
-    background-color: rgba(23, 80, 145, 0.563);
-  }
+.search,
+.presentation select {
+  border-radius: 5px;
+  max-width: 250px;
+  max-height: 35px;
+  margin: 10px;
+  border: 1px black solid;
+}
 
-  .total-price p {
-    margin-left: 10px;
-  }
 
-  .btn-buy {
-    font-size: 20px;
-    color: #ffffff;
-    background-color: #ff8000;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    cursor: pointer;
-  }
 
-  .btn-delete {
-    max-width: 35px !important;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+.shopping-cart-content {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-  .btn-buy:hover {
-    background-color: #e4770a;
-  }
+.show-products {
+  display: grid;
+  grid-template-columns: 1200px;
+  grid-template-rows: auto;
+  grid-template-rows: 200px;
+  justify-content: center;
+  color: #f5f5f5;
+}
 
-  .btn-buy:active {
-    background-color: #c97521;
-  }
+.producto-cart {
+  align-items: center;
+  border-radius: 5px;
+  max-width: 1400px;
+  background-color: rgba(47, 134, 166, 0.832);
+  border: 1px solid orange;
+  margin-bottom: 10px;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto;
+}
 
-  .cantidad-product{
-    padding-left: 20px;
-  }
+.img-product{
+  max-width: 200px;
+  max-height: auto;
+}
 
-  .btn-add,
-  .btn-remove{
-    font-size: 15px;
-  }
-  
-  .btn-add {
-    width: 35px;
-    height: 35px;
-    background-color: #f5f5f5;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    cursor: pointer;
-  }
-  
-  .btn-add:hover {
-    background-color: #e5e5e5;
-  }
-  
-  .btn-add:active {
-    background-color: #cccaca;
-  }
-  
-  .btn-remove {
-    width: 35px;
-    height: 35px;
-    background-color: #f5f5f5;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    margin: 10px;
-    cursor: pointer;
-  }
-  
-  .btn-remove:hover {
-    background-color: #e5e5e5;
-  }
-  
-  .btn-remove:active {
-    background-color: #cccaca;
-  }
-  
-  .product-amount {
-    font-size: 20px;
-    color: #f5f5f5;
-    margin: 10px;
-  }
+.img-product,
+.name-product,
+.price-product,
+.cantidad-product {
+  justify-content: baseline;
+  margin: 5px;
+  padding: 5px;
+}
+
+.producto-cart img {
+  max-width: 200px;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.total-price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  max-width: 1400px;
+  margin: 10px;
+  color: #ffffff;
+  background-color: rgba(47, 134, 166, 0.832);
+  border: 1px solid orange;
+}
+
+.total-price p {
+  margin-left: 10px;
+}
+
+.btn-buy {
+  font-size: 20px;
+  color: #ffffff;
+  background-color: #ff8000;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.btn-delete {
+  max-width: 35px !important;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-buy:hover {
+  background-color: #e4770a;
+}
+
+.btn-buy:active {
+  background-color: #c97521;
+}
+
+.cantidad-product {
+  padding-left: 20px;
+}
+
+.btn-add,
+.btn-remove {
+  font-size: 15px;
+}
+
+.btn-add {
+  width: 35px;
+  height: 35px;
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.btn-add:hover {
+  background-color: #e5e5e5;
+}
+
+.btn-add:active {
+  background-color: #cccaca;
+}
+
+.btn-remove {
+  width: 35px;
+  height: 35px;
+  background-color: #f5f5f5;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.btn-remove:hover {
+  background-color: #e5e5e5;
+}
+
+.btn-remove:active {
+  background-color: #cccaca;
+}
+
+.product-amount {
+  font-size: 20px;
+  color: #f5f5f5;
+  margin: 10px;
+}
