--- a/V2/frontend/src/components/AboutUs.css
+++ b/V2/frontend/src/components/AboutUs.css
@@ -8,3 +8,34 @@
   .AboutUsInfo h2 {
     margin-top: 20px;
   }
+
+  /* Estilos para la sección "Acerca de Nosotros" */
+.about-section {
+  margin-bottom: 20px;
+}
+
+.about-section h2 {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.about-section p {
+  color: #555;
+}
+
+/* Estilos para los productos */
+.product-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.product-image {
+  max-width: 200px;
+  max-height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
