--- a/V2/frontend/src/components/AboutUs.css
+++ b/V2/frontend/src/components/AboutUs.css
@@ -16,12 +16,12 @@
 
 .about-section h2 {
   font-size: 20px;
-  color: #333;
+  color: #ffffff;
   margin-bottom: 10px;
 }
 
 .about-section p {
-  color: #555;
+  color: #ffffff;
 }
 
 /* Estilos para los productos */
