--- a/V2/frontend/src/components/AboutUs.css
+++ b/V2/frontend/src/components/AboutUs.css
@@ -1,41 +1,69 @@
-.AboutUsInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: white;
-  }
-  
-  .AboutUsInfo h2 {
-    margin-top: 20px;
-  }
+.AboutUsInfo {
+  padding: 40px;
+  background-color: #f7f7f7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  /* Estilos para la sección "Acerca de Nosotros" */
 .about-section {
+  text-align: center;
   margin-bottom: 20px;
 }
 
-.about-section h2 {
-  font-size: 20px;
-  color: #ffffff;
-  margin-bottom: 10px;
-}
-
-.about-section p {
-  color: #ffffff;
-}
-
-/* Estilos para los productos */
 .product-item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.product-item:hover {
+  transform: translateY(-5px);
 }
 
 .product-image {
-  max-width: 200px;
-  max-height: 200px;
+  width: 200px;
+  height: 200px;
   object-fit: cover;
-  border-radius: 4px;
+  border-radius: 50%;
   margin-bottom: 10px;
+}
+
+h2, h3 {
+  color: #333;
+}
+
+p {
+  color: #777;
+  margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+  .AboutUsInfo {
+    padding: 80px;
+  }
+
+  .about-section {
+    margin-bottom: 40px;
+  }
+
+  .product-item {
+    flex-direction: row;
+  }
+
+  .product-image {
+    margin-right: 20px;
+    margin-bottom: 0;
+  }
+
+  h2, h3 {
+    font-size: 24px;
+  }
 }
