--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -22,7 +22,7 @@ body {
 
 .container-products {
     display: grid;
-    gap: 10px;
+    gap: 20px;
 }
 
 .product {
@@ -36,6 +36,19 @@ body {
 
 h1 {
     margin-top: 0;
+    text-shadow: 
+    -1px -1px 0 #000, /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */
+    1px -1px 0 #000, /* Sombra en la esquina superior derecha (x, y, tamaño, color) */
+    -1px 1px 0 #000, /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
+    1px 1px 0 #000; /* Sombra en la esquina inferior derecha (x, y, tamaño, color) */
+}
+
+b{
+    text-shadow: 
+    -1px -1px 0 #000, /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */
+    1px -1px 0 #000, /* Sombra en la esquina superior derecha (x, y, tamaño, color) */
+    -1px 1px 0 #000, /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
+    1px 1px 0 #000; /* Sombra en la esquina inferior derecha (x, y, tamaño, color) */
 }
 
 .actions-container {
@@ -72,3 +85,52 @@ h1 {
 .fa-icon-edit:active {
     color: rgb(138, 152, 158);
 }
+
+.filter-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  
+  .filter-row label {
+    margin-right: 10px;
+  }
+  
+  .filter-row input[type='text'] {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200px;
+  }
+  
+  .filter-row input[type='text']:focus {
+    outline: none;
+    border-color: #007bff;
+  }
+  
+  .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .pagination button {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0 5px;
+  }
+  
+  .pagination button:hover {
+    background-color: #eeeb3e;
+  }
+  
+  .pagination span {
+    font-size: 16px;
+    margin: 0 10px;
+  }
+  
