--- a/V2/frontend/src/components/AboutUs.css
+++ b/V2/frontend/src/components/AboutUs.css
@@ -19,7 +19,7 @@
   grid-template-rows: auto;
   text-align: center;
   gap: 25px;
-  border-radius: 4px;
+  border-radius: 5px;
   padding: 10px;
   margin: 8px;
   margin-right: 10px;
@@ -41,6 +41,8 @@
   display: block;
   margin: 0 auto; /* Centrar horizontalmente */
   align-self: center; /* Centrar verticalmente */
+  max-width: 250px;
+  border-radius: 5px;
 }
 
 
