--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -13,7 +13,7 @@ body {
 
 .header-row {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 2fr 1fr;
+    grid-template-columns: 3fr 3fr 3fr 2fr;
     font-weight: bold;
     margin-bottom: 10px;
     padding: 5px;
@@ -27,11 +27,12 @@ body {
 
 .product {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 2fr 1fr;
+    grid-template-columns: 3fr 3fr 2fr 3fr;
     border: 1px solid orange;
     border-radius: 5px;
-    padding: 5px;
+    padding: 10px;
     align-items: center;
+    gap: 1rem; /* Espacio entre columnas */
 }
 
 h1 {
@@ -162,7 +163,7 @@ b {
 }
 
 .pagination button:hover {
-    background-color: #eeeb3e;
+    background-color: #FF8C00;
 }
 
 .pagination span {
