--- a/V2/frontend/src/components/TermsConditions.css
+++ b/V2/frontend/src/components/TermsConditions.css
@@ -28,3 +28,38 @@
   flex-direction: column;
   align-items: center;
 }
+
+.condition-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+
+.condition-container div {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+
+.condition-container div.visible {
+  max-height: 500px; 
+}
+
+.fa-icon-careUp {
+  margin-left: 5px;
+  rotate: 90deg;
+}
+
+.condition-content.visible {
+  max-height: 500px;
+}
+
+.icon-container {
+  display: flex;
+  align-items: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-icon-careUp.rotate {
+  transform: rotate(90deg);
+}
