--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -189,15 +189,13 @@ b {
     }
     
     .product {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-/* Consultas de medios para pantallas de 300px a 500px */
-@media (max-width: 400px) {
-    .container {
+        display: grid;
+        grid-template-columns: 3fr 3fr 2fr 3fr;
+        border: 1px solid orange;
+        border-radius: 5px;
         padding: 10px;
+        align-items: center;
+        gap: 1rem; /* Espacio entre columnas */
     }
-
-
 }
+
