--- a/V2/frontend/src/components/MyAccountPage.css
+++ b/V2/frontend/src/components/MyAccountPage.css
@@ -35,6 +35,11 @@
   border-radius: 20px;
   background-color: rgba(47, 134, 166, 0.6);
   color: white;
+  
+}
+
+.my-account-container{
+  border: 3px solid #FF8C00; /* Borde de 3px de ancho */
 }
 
 /* Imagen del usuario */
@@ -51,7 +56,7 @@
   max-width: 300px;
   max-height: auto;
   border-radius: 50%;
-  border: 5px solid #000;
+  border: 4px solid #000;
 }
 /* Información de la cuenta */
 .buyer-info .my-account-info {
@@ -63,6 +68,19 @@
   grid-area: data-inf;
 }
 
+.my-account-info {
+  color: #000;
+  background-color: #f1d8d8;
+  border-radius: 8px;
+  text-align: center;
+  border: 0px solid #000  ;
+}
+
+.my-account-info p{
+  color: #000;
+  text-align: center;
+}
+
 .my-account-info h2 {
   text-align: center;
   font-size: 24px; 
@@ -70,8 +88,8 @@
   text-shadow: 
     -1px -1px 0 #000, /* Sombra en la esquina superior izquierda (x, y, tamaño, color) */
     1px -1px 0 #000, /* Sombra en la esquina superior derecha (x, y, tamaño, color) */
-    -1px 1px 0 #000, /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
-    1px 1px 0 #000; /* Sombra en la esquina inferior derecha (x, y, tamaño, color) */
+    -1px 2px 0 #000, /* Sombra en la esquina inferior izquierda (x, y, tamaño, color) */
+    1px 2px 0 #000; /* Sombra en la esquina inferior derecha (x, y, tamaño, color) */
 }
 
 /* Texto de relleno */
@@ -95,4 +113,27 @@
   object-fit: cover;
   border-radius: 4px;
   margin-bottom: 10px;
+}
+
+.user-type-buttons {
+  text-align: center;
+}
+
+.user-type-button {
+  padding: 15px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 5px;
+  text-align: center;
+}
+
+.user-type-button:hover {
+  background-color: #FF8C00;
+}
+
+.button.whatsapp-button{
+  text-align: center;
 }
