--- a/V2/frontend/src/components/StorePage.css
+++ b/V2/frontend/src/components/StorePage.css
@@ -157,6 +157,10 @@ select {
   cursor: pointer;
 }
 
+.product-card > p {
+  color: white;
+}
+
 .pagination {
   display: flex;
   justify-content: center;
