--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -15,7 +15,7 @@ body {
 
 .header-row {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 2fr;
+    grid-template-columns: 3fr 3fr 3fr 3fr 3fr;
     font-weight: bold;
     margin-bottom: 10px;
     padding: 5px;
@@ -29,7 +29,7 @@ body {
 
 .product {
     display: grid;
-    grid-template-columns: 3fr 3fr 2fr 3fr;
+    grid-template-columns: 3fr 3fr 2fr 3fr 3fr;
     border: 1px solid orange;
     border-radius: 5px;
     padding: 10px;
@@ -190,7 +190,7 @@ b {
     
     .product {
         display: grid;
-        grid-template-columns: 3fr 3fr 2fr 3fr;
+        grid-template-columns: 3fr 3fr 2fr 3fr 3fr;
         border: 1px solid orange;
         border-radius: 5px;
         padding: 10px;
