--- a/V2/frontend/src/components/ModalAddProducts.css
+++ b/V2/frontend/src/components/ModalAddProducts.css
@@ -52,9 +52,19 @@ label {
 }
 
 .btn-save {
-    display: none;
     width: 100%;
     height: 100%;
+    background: linear-gradient(45deg, orange, #FF8C00);
+    color: white;
+    border-radius: 5px;
+    padding: 10px 20px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease;
+    border-width: 0px;
+    top: 80%;
+    font-size: 19px;
+    margin: 5px;
+    padding: 5px;
 }
 
 .btn-save-container {
