--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 20px;
     background-color: rgba(47, 134, 166, 0.832);
@@ -15,7 +15,7 @@ body {
 
 .header-row {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr 3fr;
+    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr;
     font-weight: bold;
     margin-bottom: 10px;
     padding: 5px;
@@ -29,7 +29,7 @@ body {
 
 .product {
     display: grid;
-    grid-template-columns: 3fr 3fr 2fr 3fr 3fr;
+    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr;
     border: 1px solid orange;
     border-radius: 5px;
     padding: 10px;
