--- a/V2/frontend/src/components/ProductList.css
+++ b/V2/frontend/src/components/ProductList.css
@@ -17,8 +17,9 @@ body {
     display: grid;
     grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     padding: 5px;
+    text-align: center;
     border-bottom: 1px solid white;
 }
 
@@ -34,6 +35,7 @@ body {
     border-radius: 5px;
     padding: 10px;
     align-items: center;
+    text-align: center;
     gap: 1rem; /* Espacio entre columnas */
 }
 
